# taileater

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.sh  build_wasm.sh  index.html  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
assets/: new.scn.ron
assets/scenes/: 20210519_15:00:14.scn.ron
assets/scenes/drafts/: 20210519_18:36:00.scn.ron  8_6.scn.ron  back_and_forth.scn.ron  back_and_forth_2.scn.ron  basic_poison.scn.ron  bigger_chopsticks.scn.ron  choose_loop.scn.ron  chopstick.scn.ron  crossroads.scn.ron  double_loop.scn.ron  down_to_one.scn.ron  downclimb.scn.ron  downsizing.scn.ron  downsizing_2.scn.ron  fake_loop.scn.ron  fallthru.scn.ron  food_max_2.scn.ron  food_poison_loop.scn.ron  good_shit.scn.ron  intro_fallthru.scn.ron  long_boi.scn.ron  loop_de_loop.scn.ron  max_food.scn.ron  odd_ladder.scn.ron  one_way_two_way.scn.ron  out_and_over.scn.ron  out_on_a_limb.scn.ron  pinstripe.scn.ron  playground.scn.ron  poison_bath.scn.ron  poison_bath_2.scn.ron  poison_river.scn.ron  roundabout.scn.ron  simple.scn.ron  simpler.scn.ron  space_mgmt.scn.ron  stuck.scn.ron  top_to_bottom.scn.ron  under.scn.ron  weird_math.scn.ron
assets/scenes/prod/: 1.scn.ron  10.scn.ron  11.scn.ron  12.scn.ron  13.scn.ron  15.scn.ron  16.scn.ron  17.scn.ron  18.scn.ron  19.scn.ron  2.scn.ron  3.scn.ron  4.scn.ron  5.scn.ron  6.scn.ron  7.scn.ron  9.scn.ron
assets/sprites/drafts/: head_v2.aseprite  head_v2_open.aseprite  logo-Sheet.aseprite
src/: main.rs
