[package]
name = "taileater"
version = "0.1.0"
authors = ["Sam Szuflita <sam.szuflita@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.5", default-features=false}
bevy_webgl2 = {version="0.5", optional=true}
itertools = "0.10.0"
chrono = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
bevy_kira_audio = "0.5.1"

web-sys = {version="0.3", optional=true, features = ["console", "Window", "Storage"]}
wasm-bindgen = {version="0.2", optional=true}
winit = {version="0.24", optional=true}

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
  "bevy/mp3",
  "bevy_kira_audio/wav",
]

native = [
  "bevy/bevy_wgpu", "winit"
]

web = [
  "bevy_webgl2",
  "web-sys",
  "wasm-bindgen"
]